# skull-king-lib-cpp

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: Card.h  Game.h  Player.h  Round.h  SkullKingLib.h
lib/src/: Card.cpp  Game.cpp  Player.cpp  Round.cpp  SkullKingLib.cpp
tests/: CMakeLists.txt  deck.cpp  score.cpp  tests.cpp
